# R.O.S.E-DEMO-REF.-FRIDAY-TONY-STARK---final-check

./: .env  README.md  main.py  pyproject.toml  rose.db
brain/: agent.py  history.py  llm.py  prompt.py  test_llm.py
memory/: database.py
voice/: speech_to_text.py  test_voice.py
